Improve ShowRespond bottom bar prompt

--- a/src/components/ShowRespond.module.scss
+++ b/src/components/ShowRespond.module.scss
@@ -9,7 +9,7 @@
 
   .mainText {
     flex-grow: 1;
-    margin: 0 1rem;
+    font-size: 0.9em;
     text-align: center;
     word-break: break-word;
   }
