--- a/src/components/ShowPage.module.scss
+++ b/src/components/ShowPage.module.scss
@@ -39,18 +39,10 @@ $menu-breakpoint: largephone;
 
 .headerWithShareBtn {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-}
-
-.shareButton {
-  .buttonContent {
-    margin: 0.3em;
-    @media (max-width: mdc-layout-grid-breakpoint-min($menu-breakpoint)) {
-      display: none;
-    }
-  }
 }
 
 .showNameHeader {
