--- a/src/components/ReactModalOverride.scss
+++ b/src/components/ReactModalOverride.scss
@@ -1,21 +1,22 @@
-.ReactModal__Overlay, .ReactModal__Overlay--after-open {
+@import '../mdc';
+
+.ReactModal__Overlay,
+.ReactModal__Overlay--after-open {
   z-index: 10;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(20, 48, 103, 0.10) !important;
+  background-color: transparentize(darken($mdc-theme-primary, 20%), 0.25) !important;
 }
 
-.ReactModal__Content, .ReactModal__Content--after-open {
+.ReactModal__Content,
+.ReactModal__Content--after-open {
+  // !important overrides of react-modal styles set directly on the elements
+  background: none !important;
   border: none !important;
-  max-width: 475px;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: auto;
-  position: static !important;
+  overflow: inherit !important;
   padding: 0px !important;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+
+  top: 50% !important;
+  right: 0 !important;
+  bottom: unset !important;
+  left: 0 !important;
+  transform: translateY(-50%);
 }
