--- a/src/components/ShareModal.module.scss
+++ b/src/components/ShareModal.module.scss
@@ -1,14 +1,14 @@
 .container {
+  margin: auto;
   max-width: 475px;
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding-bottom: 20px;
-  padding-top: 20px;
-  border-radius: 0px 0px 10px 10px;
-  box-shadow: none !important;
+
+  .card {
+    align-items: center;
+    margin: 1em;
+    padding-bottom: 1em;
+    padding-top: 1em;
+  }
 }
 
 .copyUrlInput {
@@ -36,6 +36,7 @@
 
 .descText {
   margin-top: 10px;
+  text-align: center;
 }
 
 #linkShareRow {
@@ -46,10 +47,6 @@
 }
 
 .tabDiv {
-  margin-top: 10px;
-  display: flex;
-  flex-direction: column;
+  margin: 0.5em 1em 0 1em;
   width: 100%;
-  justify-content: center;
-  align-items: center
 }
