--- a/src/mdc.scss
+++ b/src/mdc.scss
@@ -3,6 +3,7 @@
 
 // MDC imports for the whole app
 @import '~@material/menu/mdc-menu';
+@import '~@material/dialog/mdc-dialog';
 @import '~@material/typography/mdc-typography';
 @import '~@material/react-button/index';
 @import '~@material/react-card/index';
