--- a/src/components/WelcomePage.module.scss
+++ b/src/components/WelcomePage.module.scss
@@ -1,4 +1,5 @@
 @import '../mdc-variables';
+@import './slick-override.scss';
 
 #halfPage {
   display: flex;
@@ -114,7 +115,6 @@
 
 .slider {
   width: 100%;
-  display: flex;
   justify-content: center;
 }
 
