Move vote button to a top banner

--- a/src/components/AppBar.module.scss
+++ b/src/components/AppBar.module.scss
@@ -48,3 +48,10 @@ $menu-breakpoint: largephone;
     display: none;
   }
 }
+
+#topBannerButton {
+  @include mdc-button-filled-accessible(lighten($mdc-theme-secondary, 12%));
+  @include mdc-button-shape-radius(0);
+  width: 100%;
+  height: 3.5em;
+}
