Add top margin to results page bottom bar

--- a/src/components/ShowResults.module.scss
+++ b/src/components/ShowResults.module.scss
@@ -25,21 +25,25 @@ $sidebar-hidden-breakpoint: largephone;
     position: sticky;
   }
 
-  div.bottomBar {
+  #bottomBar {
     display: none;
   }
 }
 
-.bottomBarContent {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-variant-numeric: tabular-nums;
+#bottomBar {
+  margin-top: 1em;
 
-  .mainText {
-    flex: 1;
-    margin: 0 1rem;
-    text-align: center;
-    word-break: break-word;
+  .bottomBarContent {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-variant-numeric: tabular-nums;
+
+    .mainText {
+      flex: 1;
+      margin: 0 1rem;
+      text-align: center;
+      word-break: break-word;
+    }
   }
 }
