--- a/src/components/DashboardPage.module.scss
+++ b/src/components/DashboardPage.module.scss
@@ -2,16 +2,18 @@
 
 .header {
   text-align: center;
-  margin-bottom: 10px;
-  margin: 20px;
+  margin: 0 0 0.3em 0;
 }
 
 .pageContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 1.4em;
+
+  @media (max-width: mdc-layout-grid-breakpoint-max(phone)) {
+    margin: 0;
+  }
 }
 
 .card {
