Add Show Edit Page (#36)
* Add basic settings page

* Make TimePicker more flexible

* Update create page for new timepicker

* Add Settings Page to Show Page

* Add TimePicker to settings page

* Update settinsg page css

* Prettify

* Add update for edit page

* Add route for settings page

* Update settings page

* Add edit show mutation

* Fix edit settings page

* Show settings page for anonymous

* Add optimistic response for settings page

* Add prompt on edit

* Add invite respondents mutation

* Add sent email prompt

* Remove settings page for anynomous polls

* Cleanup and prettify

* Correct incomplete amIAdmin conditions

* Fix crash when logged out user edits a show

* Handle login settings for edit page

* Fix share by email button timeout

--- a/src/components/ShareModal.module.scss
+++ b/src/components/ShareModal.module.scss
@@ -58,3 +58,8 @@ $vertical-margin: 0.7rem;
 #inviteButton {
   margin-top: $vertical-margin;
 }
+
+.messageText {
+  margin: 20px;
+  text-align: center;
+}
