Move login pages into new auth folder

--- a/src/components/auth/LoginPage.module.scss
+++ b/src/components/auth/LoginPage.module.scss
@@ -1,4 +1,4 @@
-@import '../mdc';
+@import '../../mdc';
 
 // Above this height, the page content will be positioned absolutely in the
 // center of the page.
