--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Material+Icons');
 @import url('https://fonts.googleapis.com/css?family=Fira+Sans');
-@import './mdc';
+@import './styles/mdc';
 
 body {
   margin: 0;
