--- a/src/components/Timeline.module.scss
+++ b/src/components/Timeline.module.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Fira+Mono:500');
-@import '../mdc-variables.scss';
+@import '../styles/mdc-variables';
 
 $empty-cell-color: white;
 
