--- a/src/components/auth/LoginPage.module.scss
+++ b/src/components/auth/LoginPage.module.scss
@@ -1,4 +1,4 @@
-@import '../../mdc';
+@import '../../styles/mdc';
 
 // Above this height, the page content will be positioned absolutely in the
 // center of the page.
