Move Show components into meeting folder

--- a/src/components/meeting/Timeline.module.scss
+++ b/src/components/meeting/Timeline.module.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Fira+Mono:500');
-@import '../styles/mdc-variables';
+@import '../../styles/mdc-variables';
 
 $empty-cell-color: white;
 
