--- a/src/components/welcome/WelcomePage.module.scss
+++ b/src/components/welcome/WelcomePage.module.scss
@@ -67,12 +67,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: url('../../background.svg') no-repeat;
+  background: url('./img/background.svg') no-repeat;
   @include backgroundScreens;
 }
 
 .descriptionContainer {
-  background: url('../../background-3.svg') no-repeat;
+  background: url('./img/background-3.svg') no-repeat;
   @include backgroundMute;
 
   padding: 100px 10% 50px 10%;
@@ -198,7 +198,7 @@
 
 .footerContainer {
   @include backgroundMute;
-  background: url('../../background-2.svg') no-repeat;
+  background: url('./img/background-2.svg') no-repeat;
 
   padding: 150px 10% 50px 10%;
   display: flex;
