--- a/src/styles/SharedStyles.module.scss
+++ b/src/styles/SharedStyles.module.scss
@@ -2,3 +2,9 @@
   color: inherit;
   text-decoration: none;
 }
+
+// Style an element to look like a link
+.link {
+  cursor: pointer;
+  text-decoration: underline;
+}
