Tweak font size of bottom bar of ShowRespond page

--- a/src/components/meeting/ShowResults.module.scss
+++ b/src/components/meeting/ShowResults.module.scss
@@ -39,6 +39,7 @@ $sidebar-hidden-breakpoint: largephone;
     .mainText {
       flex: 1;
       margin: 0 1rem;
+      font-size: 0.9em;
       text-align: center;
       word-break: break-word;
     }
