--- a/src/components/meeting/Timeline.module.scss
+++ b/src/components/meeting/Timeline.module.scss
@@ -2,13 +2,32 @@
 @import '../../styles/mdc-variables';
 
 $empty-cell-color: white;
+$filler-height: 0.4rem;
 
-.timelineWrapper {
-  overflow-x: auto;
+#timelineOuterWrapper {
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+
+  .timelineWrapper {
+    display: flex;
+    overflow-x: auto;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+
+    &.timelineHeaderWrapper {
+      position: sticky;
+      top: 3rem - $filler-height;
+      z-index: 1;
+    }
+  }
 }
 
 .timeline {
   display: inline-grid;
+  height: 100%;
 }
 
 .cornerHeaderCell {
@@ -22,11 +41,10 @@ $empty-cell-color: white;
 .tick {
   position: sticky;
   left: 0;
-  margin: 0 1px 0 0;
 
   .tickContent {
     height: 1rem;
-    padding: 0.1rem 0.4rem;
+    padding: 0.1rem $filler-height;
     text-align: right;
     transform: translateY(-50%);
   }
@@ -60,7 +78,7 @@ $empty-cell-color: white;
 
 .dateHeading {
   font-size: 1rem;
-  padding: 0.25rem 0.5rem;
+  padding: (0.25rem + $filler-height) 0.5rem 0.25rem 0.5rem;
   text-align: center;
 }
 
@@ -68,6 +86,11 @@ $empty-cell-color: white;
   background-color: $mdc-theme-surface;
   font-size: 0.8em;
   font-variant-numeric: tabular-nums;
+}
+
+.filler {
+  background-color: $mdc-theme-surface;
+  height: $filler-height;
 }
 
 ol {
